--- a/index.html
+++ b/index.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link
+      rel="shortcut icon"
+      href="images/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NFT preview card component main</title>
-</head>
-<body>
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <main>
-        <section>
-            <div class="image">
-                <img src="images/image-equilibrium.jpg" alt="">
-                <img src="images/icon-view.svg" alt="">
-            </div>
-            <div class="desc">
-                <h1>Equilibrium #3429</h1>
-                <p>Our Equilibrium collection promotes balance and calm.</p>
-                <div class="price">
-                    <h3><img src="images/icon-ethereum.svg" alt=""> 0.041 ETH</h3>
-                    <p><img src="images/icon-clock.svg" alt=""> 3 days left</p>
-                </div>
-            </div>
-            <hr>
-            <div class="creator">
-                <img src="images/image-avatar.png" alt="">
-                <p>Creation of <span>Jules Wyvern</span></p>
-            </div>
-        </section>
+      <section>
+        <div class="image">
+          <img src="images/image-equilibrium.jpg" alt="" />
+          <img src="images/icon-view.svg" alt="" />
+        </div>
+        <div class="desc">
+          <h1>Equilibrium #3429</h1>
+          <p>Our Equilibrium collection promotes balance and calm.</p>
+          <div class="price">
+            <h3><img src="images/icon-ethereum.svg" alt="" /> 0.041 ETH</h3>
+            <p><img src="images/icon-clock.svg" alt="" /> 3 days left</p>
+          </div>
+        </div>
+        <hr />
+        <div class="creator">
+          <img src="images/image-avatar.png" alt="" />
+          <p>Creation of <span>Jules Wyvern</span></p>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
