--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
   <body>
     <main>
       <section>
-        <div class="image">
-          <img src="images/image-equilibrium.jpg" alt="" />
-          <img src="images/icon-view.svg" alt="" />
+        <div class="image mar">
+          <img class="equilibrium" src="images/image-equilibrium.jpg" alt="" />
+          <div class="eye">
+              <img src="images/icon-view.svg" alt="" />
+          </div>
         </div>
         <div class="desc">
-          <h1>Equilibrium #3429</h1>
-          <p>Our Equilibrium collection promotes balance and calm.</p>
-          <div class="price">
+          <h1 class="mar">Equilibrium #3429</h1>
+          <p class="mar">Our Equilibrium collection promotes balance and calm.</p>
+          <div class="price mar">
             <h3><img src="images/icon-ethereum.svg" alt="" /> 0.041 ETH</h3>
             <p><img src="images/icon-clock.svg" alt="" /> 3 days left</p>
           </div>
         </div>
-        <hr />
+        <hr class="mar" />
         <div class="creator">
           <img src="images/image-avatar.png" alt="" />
           <p>Creation of <span>Jules Wyvern</span></p>
